cloudformation/db-test.json
{
	"AWSTemplateFormatVersion": "2010-09-09",

	"Resources": {

		"dbSg": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "blog database group",
				"SecurityGroupIngress": [{
						"IpProtocol": "tcp",
						"FromPort": "22",
						"ToPort": "22",
						"CidrIp": "0.0.0.0/0"
					},

					{
						"IpProtocol": "tcp",
						"FromPort": "5432",
						"ToPort": "5432",
						"CidrIp": "0.0.0.0/0"
					}
				]
			}
		},

		"dbMasterDns": {
			"Type": "AWS::Route53::RecordSet",
			"Properties": {
				"HostedZoneName": "littledemo.com.",
				"Comment": "DNS name for database master",
				"Name": {
					"Fn::Join": ["", [{
						"Ref": "AWS::StackName"
					}, "-dbmaster.littledemo.com."
					]]
				},
				"Type": "A",
				"TTL": "60",
				"ResourceRecords": [{
					"Fn::GetAtt": ["dbMaster", "PublicIp"]
				}]
			}
		},

		"dbMaster": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"ImageId": "ami-484d2f78",
				"InstanceType": "m1.small",
				"EbsOptimized": "false",
				"KeyName": "charliek-work",
				"Monitoring": "false",

				"SecurityGroups": [{
					"Ref": "dbSg"
				}],

				"UserData": {
					"Fn::Base64": {
						"Fn::Join": ["", [
							"#!/bin/bash -x\n",
							"chmod a+x /opt/provision/*.*\n",
							"export STACK=\"qa1\"\n",
							"export SOLO_NODE=\"/opt/chef-solo/website/chef/solo-nodes/blog-cf-db.json\"\n",
							"/opt/provision/ami-bootstrap.sh\n"
						]]
					}
				}
			}
		}
	}
}
